Fixed small grammar error
 "The Bioconductor community is a long-term user S4..." ->  "The Bioconductor community is a long-term user of S4..."

--- a/S4.Rmd
+++ b/S4.Rmd
@@ -47,7 +47,7 @@ Like the other OO chapters, the focus here will be on how S4 works, not how to d
 
 As you move towards more advanced usage, you will need to piece together needed information by carefully reading the documentation, asking questions on StackOverflow, and performing experiments. Some recommendations:
 
-*   The Bioconductor community is a long-term user S4 and has produced much of
+*   The Bioconductor community is a long-term user of S4 and has produced much of
     best material about its effective use. Start with [S4 classes and
     methods][bioc-s4-class] taught by Martin Morgan and Hervé Pagès, or
     check for a newer version at [Bioconductor course materials][bioc-courses].
